tooling/nargo_cli/tests/snapshots/execution_success/array_if_cond_simple/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: bool, mut y: [u32; 30]) {
    if x { y[0] = 1; };
    let z: u32 = y[0] + y[1];
    assert(z == 1);
}
