tooling/nargo_cli/tests/snapshots/execution_success/array_if_cond_simple/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u1, v1: [u32; 30]):
    v2 = allocate -> &mut [u32; 30]
    store v1 at v2
    (no terminator instruction)
}
